--- a/modulo1.html
+++ b/modulo1.html
@@ -152,11 +152,14 @@
                             
                             <!-- capitulo 6 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 6 - Matrizes</td>
-                                <td rowspan=1><a href="curso/modulo1capitulo6.ppt">Slides</a> (<a target="_blank" href="curso/modulo1exemplos6.html">Exemplos</a>)</td>
-                                <td rowspan=1><a target="_blank" href="curso/modulo1lista6.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=1>Respostas</td>
+                                <td rowspan=2>Cap&iacute;tulo 6 - Matrizes</td>
+                                <td rowspan=2><a href="curso/modulo1capitulo6.ppt">Slides</a> (<a target="_blank" href="curso/modulo1exemplos6.html">Exemplos</a>)</td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1lista6.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo1respostas6.html">Respostas</a></td>
                                 <td><a target="_blank" href="https://youtu.be/xW4FyeJOA74﻿">Videoaula 14/11/2015</a></td>
+                            </tr>
+                            <tr>
+                            	<td><a target="_blank" href="https://youtu.be/6cMJ-k5bQJs">Videoaula 28/11/2015</a></td>
                             </tr>
                             
                             <!-- capitulo 7 -->
