--- a/modulo1.html
+++ b/modulo1.html
@@ -165,10 +165,10 @@
                             <!-- capitulo 7 -->
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 7 - Fun&ccedil;&otilde;es e Procedimentos</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1><a href="curso/modulo1capitulo7.ppt">Slides</a></td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo1lista7.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=1>Respostas</td>
-                                <td></td>
+                                <td><a target="_blank" href="http://youtu.be/6OKON58c2JI﻿">Videoaula 05/12/2015</a></td>
                             </tr>
 
                             <!-- avaliacao 2 -->
