--- a/modulo1.html
+++ b/modulo1.html
@@ -174,7 +174,7 @@
                             <!-- avaliacao 2 -->
                             <tr>
                                 <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 2</td>
-                                <td rowspan=1>Quest&otilde;es</td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo1prova2.html">Quest&otilde;es</a></td>
                             </tr>
                         </table>
                         </p>
