--- a/modulo2.html
+++ b/modulo2.html
@@ -151,13 +151,13 @@
                                 <td rowspan=3><a href="curso/modulo2capitulo5.ppt">Slides</a></td>
                                 <td rowspan=3><a target="_blank" href="curso/modulo2lista5.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=3>Respostas</td>
-                                <td><a target="_blank" href="http://youtu.be/mfge0z6LQG4">Videoaula 07/11/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/mfge0z6LQG4">Videoaula 07/11/2015</a></td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="https://youtu.be/Q9SHSWEOmxI﻿">Videoaula 14/11/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/Q9SHSWEOmxI">Videoaula 14/11/2015</a></td>
                             </tr>
                             <tr>
-                                <td><a target="_blank" href="https://youtu.be/xXjisNuzFv8﻿">Videoaula 28/11/2015</a></td>
+                                <td><a target="_blank" href="https://youtu.be/xXjisNuzFv8">Videoaula 28/11/2015</a></td>
                             </tr>
 
                             <!-- avaliacao 2 -->
