--- a/modulo3.html
+++ b/modulo3.html
@@ -67,7 +67,84 @@
                             <li>Conhecer o conte&uacute;do do <a href="modulo2.html">M&oacute;dulo II</a>.</li>
                         </ul>
                         <p>Cronograma:</p>
-                        <p></p>
+                        <p>
+                        <table border=1>
+                            <!-- capitulo 1 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 1 - Introdu&ccedil;&atilde;o</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1></td>
+                                <td rowspan=1></td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 2 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 2 - SGBDs</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1></td>
+                                <td rowspan=1></td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 3 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 3 - OmniDB</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1></td>
+                                <td rowspan=1></td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 4 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 4 - SQLite</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 5 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 5 - Linguagem SQL</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
+                                <td></td>
+                            </tr>
+
+                            <!-- avaliacao 1 -->
+                            <tr>
+                                <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 1</td>
+                                <td rowspan=1>Quest&otilde;es</td>
+                            </tr>
+
+                            <!-- capitulo 6 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 6 - Spartacus</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
+                                <td></td>
+                            </tr>
+
+                            <!-- capitulo 7 -->
+                            <tr>
+                                <td rowspan=1>Cap&iacute;tulo 7 - PostgreSQL</td>
+                                <td rowspan=1>Slides</td>
+                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1>Respostas</td>
+                                <td></td>
+                            </tr>
+
+                            <!-- avaliacao 2 -->
+                            <tr>
+                                <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 2</td>
+                                <td rowspan=1>Quest&otilde;es</td>
+                            </tr>
+                        </table>
+                        </p>
                     </div>
                     <p class="meta">Curitiba, 12 de agosto de 2014.</p>
                     <script src="https://apis.google.com/js/plusone.js">
