--- a/spartacus.html
+++ b/spartacus.html
@@ -40,9 +40,10 @@
             <ul>
                 <li class="first"><a href="index.html" accesskey="1" title="In&iacute;cio">In&iacute;cio</a></li>
                 <li><a href="curso.html" accesskey="2" title="Curso">Curso de Programa&ccedil;&atilde;o C#</a></li>
-                <li><a class="current" href="spartacus.html" accesskey="3" title="Spartacus">Biblioteca Spartacus</a></li>
-                <li><a href="blog.html" accesskey="4" title="Blog">Blog</a></li>
-                <li><a href="sobremim.html" accesskey="5" title="Sobre mim">Sobre mim</a></li>
+                <li><a class="current" href="spartacus.html" accesskey="3" title="Spartacus">Spartacus</a></li>
+                <li><a href="omnidb.html" accesskey="4" title="OmniDB">OmniDB</a></li>
+                <li><a href="blog.html" accesskey="5" title="Blog">Blog</a></li>
+                <li><a href="sobremim.html" accesskey="6" title="Sobre mim">Sobre mim</a></li>
             </ul>
         </div>
         <hr />
