--- a/omnidb.html
+++ b/omnidb.html
@@ -1,6 +1,6 @@
 ﻿<html>
     <head>
-        <title>William Ivanski - Spartacus</title>
+        <title>William Ivanski - OmniDB</title>
         
         <link rel="shortcut icon" type="image/x-icon" href="logo.ico" />
 
