Melhorias cap 1 e cap 2

--- a/sobremim.html
+++ b/sobremim.html
@@ -95,6 +95,7 @@
                             <li><a target="_blank" href="http://www.ufpr.br">Universidade Federal do Paran&aacute;</a></li>
                         </ul>
                     </li>
+                    <iframe src="http://www.codeproject.com/members/flair/7300106" height="200" width="250" scrolling="no" frameborder="no"></iframe>
                 </ul>
             </div>
             <!-- end sidebar -->
