--- a/modulo3.html
+++ b/modulo3.html
@@ -73,10 +73,10 @@
                             <!-- capitulo 1 -->
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 1 - Introdu&ccedil;&atilde;o</td>
-                                <td rowspan=1>Slides</td>
+                                <td rowspan=1><a href="curso/modulo3capitulo1.pptx">Slides</a></td>
                                 <td rowspan=1></td>
                                 <td rowspan=1></td>
-                                <td></td>
+                                <td><a target="_blank" href="http://youtu.be/9NQsK-0c66w">Videoaula 05/03/2016</a></td>
                             </tr>
 
                             <!-- capitulo 2 -->
