--- a/modulo3.html
+++ b/modulo3.html
@@ -85,7 +85,7 @@
                                 <td rowspan=1>Slides</td>
                                 <td rowspan=1>Exerc&iacute;cios</td>
                                 <td rowspan=1>Respostas</td>
-                                <td></td>
+                                <td><a target="_blank" href="https://youtu.be/AXiLLwP8Y-0">Videoaula 12/03/2016</a></td>
                             </tr>
 
                             <!-- capitulo 3 -->
