--- a/modulo3.html
+++ b/modulo3.html
@@ -82,8 +82,8 @@
                             <!-- capitulo 2 -->
                             <tr>
                                 <td rowspan=3>Cap&iacute;tulo 2 - SQLite</td>
-                                <td rowspan=3>Slides</td>
-                                <td rowspan=3>Exerc&iacute;cios</td>
+                                <td rowspan=3><a href="curso/modulo3capitulo2.pptx">Slides</a></td>
+                                <td rowspan=3><a target="_blank" href="curso/modulo3lista2.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=3>Respostas</td>
                                 <td><a target="_blank" href="https://youtu.be/AXiLLwP8Y-0">Videoaula 12/03/2016</a></td>
                             </tr>
@@ -92,6 +92,9 @@
                             </tr>
                             <tr>
                             	<td><a target="_blank" href="https://youtu.be/ZFUI7WlByfg">Videoaula 26/03/2016</a></td>
+                            </tr>
+                            <tr>
+                            	<td><a target="_blank" href="https://youtu.be/IAJWxIPlSWs﻿">Videoaula 09/04/2016</a></td>
                             </tr>
 
                             <!-- capitulo 3 -->
