--- a/modulo3.html
+++ b/modulo3.html
@@ -179,6 +179,12 @@
                             <li><a target="_blank" href="https://code.visualstudio.com/Download">Visual Studio Code (Linux,Windows,MacOSX)</a></li>
                             <li><a target="_blank" href="http://www.icsharpcode.net/OpenSource/SD/Download/">SharpDevelop (Windows)</a></li>
                         </ul>
+                        <br/><br/>
+                        <h2><a>Outros Downloads</a></h2>
+                        <ul>
+                            <li><a target="_blank" href="http://omnidb.com.br/pt_download.html">OmniDB</a></li>
+                            <li><a href="spartacus/Spartacus.dll">Spartacus</a></li>
+                        </ul>
                     </li>
                 </ul>
             </div>
