--- a/modulo3.html
+++ b/modulo3.html
@@ -81,10 +81,10 @@
 
                             <!-- capitulo 2 -->
                             <tr>
-                                <td rowspan=4>Cap&iacute;tulo 2 - SQLite</td>
-                                <td rowspan=4><a href="curso/modulo3capitulo2.pptx">Slides</a></td>
-                                <td rowspan=4><a target="_blank" href="curso/modulo3lista2.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=4>Respostas</td>
+                                <td rowspan=5>Cap&iacute;tulo 2 - SQLite</td>
+                                <td rowspan=5><a href="curso/modulo3capitulo2.pptx">Slides</a></td>
+                                <td rowspan=5><a target="_blank" href="curso/modulo3lista2.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=5><a target="_blank" href="curso/modulo3respostas2.html">Respostas</a></td>
                                 <td><a target="_blank" href="https://youtu.be/AXiLLwP8Y-0">Videoaula 12/03/2016</a></td>
                             </tr>
                             <tr>
@@ -95,6 +95,9 @@
                             </tr>
                             <tr>
                             	<td><a target="_blank" href="https://youtu.be/IAJWxIPlSWs﻿">Videoaula 09/04/2016</a></td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="https://youtu.be/ICIJ2Foz1jI﻿">Videoaula 16/04/2016</a></td>
                             </tr>
 
                             <!-- capitulo 3 -->
