--- a/curso/modulo3respostas2.html
+++ b/curso/modulo3respostas2.html
@@ -101,10 +101,14 @@
   <p>
    9) Você foi convidado a elaborar um banco de dados para uma loja de material de escritório que deseja registrar informações sobre vendas de materiais. De acordo com o solicitado pela loja, para cada venda você deverá armazenar o código, CNPJ, nome e endereço do cliente para o qual fez a venda, o número da nota fiscal, a data da venda, o valor do desconto concedido, o endereço de entrega e o código, nome, descrição e preço de tabela dos materiais que foram vendidos, as quantidades vendidas com os preços praticados para cada tipo de material. Note que para um mesmo cliente a loja pode realizar várias vendas, e um mesmo tipo de material pode ser vendido várias vezes. Elabore o DER deste banco de dados e crie-o em SQLite utilizando o OmniDB. Elabore o nome dos campos de maneira a deixar claro que informação está sendo armazenada no mesmo.
   </p>
+  <p><a href="exercicio09.db">Baixar banco de dados</a>. DER:</p>
+  <img src="modulo3lista2resposta09.png" alt="DER" />
   <hr/>
   <p>
    10) Desenhe o DER e crie em SQLite um banco de dados para atender à seguinte situação:
   </p>
+  <p><a href="exercicio10.db">Baixar banco de dados</a>. DER:</p>
+  <img src="modulo3lista2resposta10.png" alt="DER" />
   <ul>
    <li>Quero criar um banco de dados para organizar os meus CDs;</li>
    <li>Um CD possui um título e diversas músicas;</li>
