--- a/curso/modulo3respostas2.html
+++ b/curso/modulo3respostas2.html
@@ -67,6 +67,17 @@
   <p>
    3) Baixe o arquivo <a href="escola.xlsx">escola.xlsx</a>. Desenhe o DER, descreva na forma algébrica e crie o banco de dados em SQLite usando o OmniDB.
   </p>
+  <p>
+   <a href="escola.db">Baixar banco de dados</a>. Forma algébrica:
+  </p>
+  <ul>
+   <li>aluno (numalu, nomealu, curso, ano, idade)</li>
+   <li>professor (idprof, nomeprof, iddepto)</li>
+   <li>disciplina (nome, horario, sala, idprof)</li>
+   <li>matricula (numalu, nomedisc)</li>
+  </ul>
+  <p>DER:</p>
+  <img src="modulo3lista2resposta03.png" alt="DER" />
   <hr/>
   <p>
    4) Baixe o banco de dados <a href="northwind.db">northwind.db</a> e o descreva na forma algébrica. Em seguida, desenhe o seu DER.
