--- a/modulo3.html
+++ b/modulo3.html
@@ -107,9 +107,9 @@
                             <tr>
                                 <td rowspan=1>Cap&iacute;tulo 3 - Linguagem SQL</td>
                                 <td rowspan=1>Slides</td>
-                                <td rowspan=1>Exerc&iacute;cios</td>
+                                <td rowspan=1><a target="_blank" href="curso/modulo3lista3.html">Exerc&iacute;cios</a></td>
                                 <td rowspan=1>Respostas</td>
-                                <td></td>
+                                <td><a target="_blank" href="https://youtu.be/qxIOr7NKfwg">Videoaula 30/04/2016</a></td>
                             </tr>
 
                             <!-- avaliacao 1 -->
