--- a/modulo3.html
+++ b/modulo3.html
@@ -105,11 +105,14 @@
 
                             <!-- capitulo 3 -->
                             <tr>
-                                <td rowspan=1>Cap&iacute;tulo 3 - Linguagem SQL</td>
-                                <td rowspan=1>Slides</td>
-                                <td rowspan=1><a target="_blank" href="curso/modulo3lista3.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=1>Respostas</td>
+                                <td rowspan=2>Cap&iacute;tulo 3 - Linguagem SQL</td>
+                                <td rowspan=2>Slides</td>
+                                <td rowspan=2><a target="_blank" href="curso/modulo3lista3.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=2>Respostas</td>
                                 <td><a target="_blank" href="https://youtu.be/qxIOr7NKfwg">Videoaula 30/04/2016</a></td>
+                            </tr>
+                            <tr>
+                                <td><a target="_blank" href="https://youtu.be/zl600ckFFKM">Videoaula 07/05/2016</a></td>
                             </tr>
 
                             <!-- avaliacao 1 -->
