--- a/modulo3.html
+++ b/modulo3.html
@@ -105,10 +105,10 @@
 
                             <!-- capitulo 3 -->
                             <tr>
-                                <td rowspan=3>Cap&iacute;tulo 3 - Linguagem SQL</td>
-                                <td rowspan=3>Slides</td>
-                                <td rowspan=3><a target="_blank" href="curso/modulo3lista3.html">Exerc&iacute;cios</a></td>
-                                <td rowspan=3><a target="_blank" href="curso/modulo3respostas3.html">Respostas</a></td>
+                                <td rowspan=4>Cap&iacute;tulo 3 - Linguagem SQL</td>
+                                <td rowspan=4>Slides</td>
+                                <td rowspan=4><a target="_blank" href="curso/modulo3lista3.html">Exerc&iacute;cios</a></td>
+                                <td rowspan=4><a target="_blank" href="curso/modulo3respostas3.html">Respostas</a></td>
                                 <td><a target="_blank" href="https://youtu.be/qxIOr7NKfwg">Videoaula 30/04/2016</a></td>
                             </tr>
                             <tr>
@@ -116,6 +116,9 @@
                             </tr>
                             <tr>
                             	<td><a target="_blank" href="https://youtu.be/BA40gwsFOaw">Videoaula 14/05/2016</a></td>
+                            </tr>
+                            <tr>
+                            	<td><a target="_blank" href="https://youtu.be/ErLBO9FJZ9Y">Videoaula 21/05/2016</a></td>
                             </tr>
 
                             <!-- avaliacao 1 -->
