--- a/blog.html
+++ b/blog.html
@@ -33,10 +33,8 @@
     </head>
     
     <body>
-        <!--
-        <script type='text/javascript' >var qadserve_width  = '120';var qadserve_height = '600';var qadserve_pid = 'd2bc423f-b2f5-4c25-bf77-5cc65fee85e0'; var qadserve_direction = 'left';var qadserve_from_top = 60;</script><script type='text/javascript'  src='http://mmrm.qadserve.com/qadserve_slider.min.js'></script>
-        <script type='text/javascript' >var qadserve_width  = '120';var qadserve_height = '600';var qadserve_pid = 'e18cf5ea-2e8f-49d4-a182-6e080741f818'; var qadserve_direction = 'right';var qadserve_from_top = 60;</script><script type='text/javascript'  src='http://mmrm.qadserve.com/qadserve_slider.min.js'></script>
-        -->
+        <script type='text/javascript' src='//clksite.com/adServe/banners?tid=146170_255041_0&type=slider&size=120x600&position=center&animate=on'></script>
+        <script type='text/javascript' src='//clksite.com/adServe/banners?tid=146170_255041_3&type=slider&side=right&size=120x600&position=center&animate=on'></script>
 
         <div id="logo">
             <h1>William Ivanski</h1>
