--- a/blog.html
+++ b/blog.html
@@ -33,8 +33,8 @@
     </head>
     
     <body>
-        <script type='text/javascript' src='//clksite.com/adServe/banners?tid=146170_255041_0&type=slider&size=120x600&position=center&animate=on'></script>
-        <script type='text/javascript' src='//clksite.com/adServe/banners?tid=146170_255041_3&type=slider&side=right&size=120x600&position=center&animate=on'></script>
+        <script type='text/javascript' src='//clksite.com/adServe/banners?tid=146170_255041_0&type=slider&size=120x600&position=center&animate=off&close=disable'></script>
+        <script type='text/javascript' src='//clksite.com/adServe/banners?tid=146170_255041_3&type=slider&side=right&size=120x600&position=center&animate=off&close=disable'></script>
 
         <div id="logo">
             <h1>William Ivanski</h1>
