--- a/blog.html
+++ b/blog.html
@@ -178,6 +178,8 @@ env PATH=/opt/mono/bin:$PATH LD_LIBRARY_PATH=.:bin:/opt/mono/lib:$LD_LIBRARY_PAT
             </p>
             <p class="credit">Designed by <a href="http://www.nodethirtythree.com/">NodeThirtyThree</a> + <a href="http://www.freecsstemplates.org">FCT</a></p>
         </div>
+
+        <script type="text/javascript"> var infolinks_pid = 2818334; var infolinks_wsid = 0; </script> <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
     </body>
 </html>
 
