--- a/curso/modulo2lista1.html
+++ b/curso/modulo2lista1.html
@@ -5,8 +5,8 @@
   <title>
    Curso de Programa&ccedil;&atilde;o C# - M&oacute;dulo II Lista 1
   </title>
-  <link href="../github.min.css" rel="stylesheet"/>
-  <script src="../highlight.min.js">
+  <link href="../css/github.min.css" rel="stylesheet"/>
+  <script src="../js/highlight.min.js">
   </script>
   <script>
    hljs.initHighlightingOnLoad();
