--- a/curso/modulo3lista2.html
+++ b/curso/modulo3lista2.html
@@ -5,8 +5,8 @@
   <title>
    Curso de Programa&ccedil;&atilde;o C# - M&oacute;dulo III Lista 2
   </title>
-  <link href="../github.min.css" rel="stylesheet"/>
-  <script src="../highlight.min.js">
+  <link href="../css/github.min.css" rel="stylesheet"/>
+  <script src="../js/highlight.min.js">
   </script>
   <script>
    hljs.initHighlightingOnLoad();
