--- a/index.html
+++ b/index.html
@@ -98,6 +98,12 @@
                 </ul>
             </div>
             <div class="sb-widget clearfix">
+                <h4 class="widget-title"><span>Parceiros</span></h4>
+                <ul class="mh-rp-widget widget-list">
+                    <li class="rp-widget-item"><a target="_blank" href="http://www.planningservice.com.br">Planning Service Transfer Pricing</a></li>
+                </ul>
+            </div>
+            <div class="sb-widget clearfix">
                 <h4 class="widget-title"><span>Contato</span></h4>
                 <a href="mailto:william.ivanski@gmail.com"><img src="img/email.png" alt="email" /></a>
                 <a href="https://www.github.com/wind39" target="_blank"><img src="img/github.png" alt="github" /></a>
