--- a/modulo3.html
+++ b/modulo3.html
@@ -75,7 +75,7 @@
                     <li>Vontade de aprender;</li>
                     <li>Computador com sistema operacional Linux, Windows ou Mac OS X;</li>
                     <li>Conexão com a internet para assistir as aulas ao vivo ou pelo Youtube.</li>
-                    <li>Conhecer o conteúdo do <a href="modulo2.html">Módulo I</a>.</li>
+                    <li>Conhecer o conteúdo do <a href="modulo2.html">Módulo II</a>.</li>
                 </ul>                
                 <p>Cronograma:</p>
                 <table>
