--- a/curso/modulo3prova1.html
+++ b/curso/modulo3prova1.html
@@ -42,6 +42,8 @@
     <li>Ao concluir cada exercício, mande o código SQL para <a href="mailto:william.ivanski@gmail.com">william.ivanski@gmail.com</a>. Inclua seu nome no assunto ou no corpo do e-mail para que eu possa identificá-lo.</li>
    </ul>
   <hr/>
+  <p><b>ATENÇÃO!! Para esta prova, você precisará do banco de dados <a href="locadora.db">locadora.db</a></b>.</p>
+  <hr/>
   <p>
    <b>1) (5 pontos)</b> Obtenha o título e diretor dos filmes do gênero romance.
   </p>
