--- a/modulo3.html
+++ b/modulo3.html
@@ -142,7 +142,7 @@
                     <!-- avaliacao 1 -->
                     <tr>
                         <td rowspan=1 colspan=4>AVALIA&Ccedil;&Atilde;O 1</td>
-                        <td rowspan=1>Quest&otilde;es</td>
+                        <td rowspan=1><a target="_blank" href="curso/modulo3prova1.html">Quest&otilde;es</a></td>
                     </tr>
 
                     <!-- capitulo 4 -->
