--- a/modulo3.html
+++ b/modulo3.html
@@ -76,7 +76,8 @@
                     <li>Computador com sistema operacional Linux, Windows ou Mac OS X;</li>
                     <li>Conexão com a internet para assistir as aulas ao vivo ou pelo Youtube.</li>
                     <li>Conhecer o conteúdo do <a href="modulo2.html">Módulo II</a>.</li>
-                </ul>                
+                </ul>    
+                <p>Repositório de exemplos e soluções dos exercícios no <a target="_blank" href="https://github.com/wind39/curso_modulo3">Github</a>.
                 <p>Cronograma:</p>
                 <table>
                     <!-- capitulo 1 -->
@@ -151,7 +152,7 @@
                         <td rowspan=1>Slides</td>
                         <td rowspan=1>Exerc&iacute;cios</td>
                         <td rowspan=1>Respostas</td>
-                        <td></td>
+                        <td><a target="_blank" href="https://youtu.be/1HD86yEduqU">Videoaula 30/07/2016</a></td>
                     </tr>
 
                     <!-- capitulo 5 -->
