--- a/modulo3.html
+++ b/modulo3.html
@@ -148,11 +148,14 @@
 
                     <!-- capitulo 4 -->
                     <tr>
-                        <td rowspan=1>Cap&iacute;tulo 4 - Spartacus</td>
-                        <td rowspan=1>Slides</td>
-                        <td rowspan=1>Exerc&iacute;cios</td>
-                        <td rowspan=1>Respostas</td>
+                        <td rowspan=2>Cap&iacute;tulo 4 - Spartacus</td>
+                        <td rowspan=2>Slides</td>
+                        <td rowspan=2>Exerc&iacute;cios</td>
+                        <td rowspan=2>Respostas</td>
                         <td><a target="_blank" href="https://youtu.be/1HD86yEduqU">Videoaula 30/07/2016</a></td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" href="https://youtu.be/NsyT7WEU0y8">Videoaula 06/08/2016</a></td>
                     </tr>
 
                     <!-- capitulo 5 -->
