--- a/curso/modulo3respostas3.html
+++ b/curso/modulo3respostas3.html
@@ -3,7 +3,7 @@
  <head>
   <meta charset="utf-8"/>
   <title>
-   Curso de Programa&ccedil;&atilde;o C# - M&oacute;dulo III Lista 3
+   Curso de Programa&ccedil;&atilde;o C# - M&oacute;dulo III Respostas 3
   </title>
   <link href="../css/github.min.css" rel="stylesheet"/>
   <script src="../js/highlight.min.js">
@@ -217,6 +217,15 @@ group by p.categoria</code></pre>
   <p>
    13) Encontre o nome de todos os alunos do segundo ano que estão matriculados em uma disciplina ministrada pela professora "Ivana S.".
   </p>
+  <pre><code>select a.nomealu
+from professor p
+inner join disciplina d
+        on d.idprof = p.idprof
+inner join matricula m
+        on m.nomedisc = d.nome
+inner join aluno a
+        on a.numalu = m.numalu
+where p.nomeprof = 'Ivana Silva'</code></pre>
   <p>
    14) Encontre a idade do aluno mais velho que seja do curso de "História" ou que esteja matriculado em uma disciplina ministrada por "Ivana S.".
   </p>
