--- a/curso.html
+++ b/curso.html
@@ -167,6 +167,7 @@
                     <li class="rp-widget-item"><a target="_blank" href="https://www.youtube.com/channel/UCeONQR7dcUYXXlv59kHu1mA">Canal no Youtube</a></li>
                     <li class="rp-widget-item"><a target="_blank" href="https://plus.google.com/u/0/communities/102417267229322909418">Comunidade no Google+</a></li>
                     <li class="rp-widget-item"><a target="_blank" href="https://www.facebook.com/groups/1729461200615461/">Grupo no Facebook</a></li>
+                    <li class="rp-widget-item"><a target="_blank" href="https://www.reddit.com/r/cursoprogramacao/">Subreddit</a></li>
                 </ul>
             </div>
             <div class="sb-widget clearfix">
