--- a/modulo3.html
+++ b/modulo3.html
@@ -148,14 +148,17 @@
 
                     <!-- capitulo 4 -->
                     <tr>
-                        <td rowspan=2>Cap&iacute;tulo 4 - Spartacus</td>
-                        <td rowspan=2>Slides</td>
-                        <td rowspan=2>Exerc&iacute;cios</td>
-                        <td rowspan=2>Respostas</td>
+                        <td rowspan=3>Cap&iacute;tulo 4 - Spartacus</td>
+                        <td rowspan=3>Slides</td>
+                        <td rowspan=3>Exerc&iacute;cios</td>
+                        <td rowspan=3>Respostas</td>
                         <td><a target="_blank" href="https://youtu.be/1HD86yEduqU">Videoaula 30/07/2016</a></td>
                     </tr>
                     <tr>
                         <td><a target="_blank" href="https://youtu.be/NsyT7WEU0y8">Videoaula 06/08/2016</a></td>
+                    </tr>
+                    <tr>
+                        <td><a target="_blank" href="https://youtu.be/_CFnfwF76x8">Videoaula 06/08/2016</a></td>
                     </tr>
 
                     <!-- capitulo 5 -->
